--- a/src/components/Modals/Modal.css
+++ b/src/components/Modals/Modal.css
@@ -32,6 +32,27 @@
     color: #333;
   }
   
+  .modal-overlay.modal-sm .modal-content {
+    width: 600px;
+    max-width: 90%;
+    padding: 20px; 
+    max-height: 78vh;   
+    overflow-y: auto; 
+}
+.modal-overlay.modal-sm .settings-form textarea {
+    min-height: 80px;
+    height: 80px;
+    resize: vertical;
+}
+
+
+.modal-overlay.modal-sm .settings-form .modal-footer {
+    padding-top: 10px; 
+    margin-top: 5px; 
+    display: flex;
+    justify-content: flex-end; 
+    gap: 10px;
+}
   @keyframes fadeIn {
     from {
       opacity: 0;
@@ -42,4 +63,5 @@
       transform: scale(1);
     }
   }
+  
   
